tests/agl/rejections/type/let_type_mismatch.agl
let n: int = "five"
n
